# 2DMC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  INSTALL.md  README.md  changelog.txt  main.py  main.spec  pyproject.toml
conf/peripherals/: keybinds.json
data/blocks/: andesite.json  bedrock.json  coal_ore.json  cobbled_deepslate.json  cobblestone.json  copper_ore.json  dandelion.json  deepslate.json  deepslate_coal_ore.json  deepslate_diamond_ore.json  deepslate_emerald_ore.json  deepslate_gold_ore.json  deepslate_iron_ore.json  deepslate_lapis_ore.json  deepslate_redstone_ore.json  diamond_ore.json  diorite.json  dirt.json  emerald_ore.json  glass.json  gold_ore.json  granite.json  grass.json  grass_block.json  iron_ore.json  lapis_lazuli_ore.json  lapis_ore.json  leafed_oak_log.json  oak_leaves.json  oak_log.json  oak_planks.json  poppy.json  redstone_ore.json  stone.json  tall_grass.json  tall_grass_top.json  tuff.json
data/gui/: player.json
data/ore_distribution/: coal.json  diamond.json  emerald.json  gold.json  iron.json  lapis.json  redstone.json
dev/docs/: book.toml
dev/tests/: CA.py  highest_opaque_blocks.py  pygame_blit_benchmark.py  timer.py
res/block_data/: dirt.json  grass.json  grass_block.json
src/: __init__.py  args.py  background.py  block.py  chunk.py  chunk_thread.py  constants.py  draw_order.py  game.py  images.py  information_labels.py  inventory.py  main.py  parsing.py  particle.py  player.py  settings.py  sprite.py  text_box.py  utils.py  world_gen.py
src/common/: clamps.py  constants.py  images.py  parsing.py  utils.py
src/effects/: block_shadow.py  particles.py  spawn_particles.py
src/entities/: entity.py  player.py
src/gui/: crosshair.py  inventory.py
src/lib/rust/metaball/: Cargo.toml  pyproject.toml  test.py
src/lib/rust/metaball/src/: lib.rs
src/management/: game.py  game_manager.py  scenes.py  (+1 more)
(+67 files in other folders)
