[tool.poetry]
name = "2dmc"
version = "0.3.0"
description = "A passion project to recreate the game Minecraft in 2D."
authors = [ "tr3v0r", "DaNub" ]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
opensimplex = "^0.4.3"
fast-enum = "^1.3.0"
fishhook = "^0.1.4"
multipledispatch = "^0.6.0"

[tool.poe.tasks]
main = "poetry run python main.py"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
