[tool.poetry]
name = "2dmc"
version = "0.3.0"
description = "A passion project to recreate the game Minecraft in 2D."
authors = [ "tr3v0r", "DaNub" ]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
opensimplex = "^0.4.3"
fast-enum = "^1.3.0"
fishhook = "^0.1.4"
multipledispatch = "^0.6.0"
maturin = "^0.13.2"

[tool.poe]
poetry_command = ""

[tool.poe.tasks.start]
sequence = [ "compile_release", { cmd = "poetry run python main.py "} ]

[tool.poe.tasks.develop]
sequence = [ "compile", { cmd = "poetry run python main.py "} ]

[tool.poe.tasks.compile]
cmd = "maturin develop"
cwd = "src/lang/rust"

[tool.poe.tasks.compile_release]
cmd = "maturin develop --release"
cwd = "src/lang/rust"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
